# update_rpm

./: README.md  pyproject.toml  update_rpm.py
update_rpm/: update_rpm.py
